Readme general information & package.json

--- a/package.json
+++ b/package.json
@@ -2,8 +2,14 @@
   "name": "com.github.d3tonat0r.unityosxbuild",
   "version": "0.1.0",
   "displayName": "OSX Build",
-  "description": "A brief description of the package. This is the text that appears in the details view of the Package Manager window. This field supports UTF–8 character codes. This means that you can use special formatting character codes, such as line breaks (\n) and bullets (\u25AA).",
-  "unity": "2022.1",
-  "category": "",
-  "hideInEditor": true
+  "description": "A Unity package for zipping builds automatically, and on Windows, fix OSX builds by adding the executable bits in the process.",
+  "unity": "2022.3",
+  "keywords": [
+    "zip",
+    "osx",
+    "macos",
+    "executable bit"
+  ],
+  "hideInEditor": true,
+  "documentationUrl": "https://github.com/D3TONAT0R/UnityOSXBuild/blob/main/README.md"
 }
